# WatchDogAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: INSTALL.md  architecture.md
docs/api/: WatchDogAI.postman_collection.json  openapi.json
docs/deliverables/: PRD.docx  PRD.md  SRS.docx  SRS.md  development-document.docx  development-document.md
docs/demo/: demo-narration.md
docs/issues/: ISSUES.md
docs/plans/: 2026-02-06-violence-detection-design.md
src/: __init__.py  config.py  pipeline.py  runtime.py
src/alerts/: clip_recorder.py  manager.py  mongo_storage.py  notifier.py  storage.py
src/analytics/: behavior.py
src/capture/: __init__.py  camera.py
src/dashboard/: __init__.py  app.py  routes.py
src/dashboard/templates/: alerts.html  base.html  live.html
src/detector/: __init__.py  model.py  objects.py  preprocessing.py
src/mqtt/: client.py
tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_pipeline.py  test_runtime.py
tests/alerts/: test_clip_recorder.py  test_manager.py  test_mongo_storage.py  test_notifier.py  test_storage.py
tests/analytics/: test_behavior.py
tests/capture/: test_camera.py
tests/dashboard/: test_routes.py
tests/detector/: test_model.py  test_objects.py  test_preprocessing.py
tests/mqtt/: test_client.py
